# winaudio

./: .gitignore  CMakeLists.txt  README.md  capture-open.txt
.github/workflows/: build.yml  pr-check.yml  release.yml
docs/: convergence-audit-2026-05-29.md  convergence-backlog-2026-05-29.md  convergence-must-fix-2026-05-29.md  gui-manual-verification-checklist-2026-05-29.md
src/app/: app_model.cpp  app_model.h  device_notification_client.cpp  device_notification_client.h  probe_cli.h  probe_cli_main.cpp  probe_cli_options.cpp  probe_ui_text.cpp  probe_ui_text.h  win_audio_app.cpp
src/audio/: audio_session_controller.cpp  audio_session_controller.h  audio_session_types.cpp  audio_session_types.h  audio_types.cpp  audio_types.h  com_support.cpp  com_support.h  rtc_sidecar.cpp  rtc_sidecar.h
src/audio/backends/: audio_backend_interfaces.h  real_backends.cpp  real_backends.h  stub_backends.cpp  stub_backends.h  wave_format_utils.cpp  wave_format_utils.h
src/audio/pipeline/: audio_ring_buffer.cpp  audio_ring_buffer.h  signal_analyzer.cpp  signal_analyzer.h  wav_dump_writer.cpp  wav_dump_writer.h
src/audio/resample/: audio_resampler.cpp  audio_resampler.h
src/rtc/: agora_rtc_publisher.cpp  agora_rtc_publisher.h  agora_rtc_types.cpp  agora_rtc_types.h
src/ui/: waveform_renderer.cpp  waveform_renderer.h
tests/: app_model_text_test.cpp  core_pipeline_test.cpp  probe_cli_test.cpp  probe_ui_text_test.cpp  session_controller_test.cpp  wave_format_utils_test.cpp
tools/: build_environment_helpers.ps1  convergence_helpers.ps1  inspect_build_environment.ps1  invoke_msbuild_safe.ps1  package_release_assets.ps1  publish_github_release.ps1  run_cli_integration_ctest.ps1  run_convergence_check.ps1  run_gui_smoke.ps1  run_gui_smoke_ctest.ps1  run_hardware_validation.ps1  run_hardware_validation_ctest.ps1  run_hosted_stable_ctest.ps1  test_build_environment_tools.ps1  test_cli_integration.ps1  test_convergence_helpers.ps1  verify_packaged_artifact.ps1
